--- a/app/src/main/res/layout/activity_event_board.xml
+++ b/app/src/main/res/layout/activity_event_board.xml
@@ -7,8 +7,15 @@
     tools:context="com.example.robertwais.pickupgames.EventBoardActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewID"
         android:layout_width="368dp"
         android:layout_height="495dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent" tools:layout_editor_absoluteX="8dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
