--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -19,19 +19,20 @@
     <TextView
         android:id="@+id/titleInput"
         android:layout_width="156dp"
-        android:layout_height="47dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
         android:text="TextView"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/descInput"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.394"
+        app:layout_constraintHorizontal_bias="0.368"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.631" />
+        app:layout_constraintVertical_bias="0.64" />
 
     <TextView
         android:id="@+id/textView"
@@ -40,6 +41,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="32dp"
+        android:gravity="center_vertical"
         android:text="@string/description"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,23 +52,25 @@
     <TextView
         android:id="@+id/descInput"
         android:layout_width="161dp"
-        android:layout_height="36dp"
-        android:layout_marginBottom="336dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="332dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:gravity="center_vertical|center"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.307"
+        app:layout_constraintHorizontal_bias="0.269"
         app:layout_constraintStart_toEndOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="137dp"
-        android:layout_height="46dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="56dp"
+        android:gravity="center_vertical"
         android:text="@string/title"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,14 +94,14 @@
     <TextView
         android:id="@+id/timeInput"
         android:layout_width="59dp"
-        android:layout_height="26dp"
+        android:layout_height="24dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.046"
+        app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/descInput"
         app:layout_constraintVertical_bias="0.0" />
