--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -10,7 +10,7 @@
         android:id="@+id/declineBtn"
         android:layout_width="152dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="248dp"
+        android:layout_marginBottom="268dp"
         android:layout_marginEnd="16dp"
         android:text="@string/notgoing"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,31 +29,32 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/descInput"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.368"
+        app:layout_constraintHorizontal_bias="0.384"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.64" />
+        app:layout_constraintVertical_bias="0.213" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="145dp"
-        android:layout_height="38dp"
+        android:layout_width="139dp"
+        android:layout_height="41dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:gravity="center_vertical"
         android:text="@string/description"
+        android:textAlignment="textEnd"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.006" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/descInput"
         android:layout_width="161dp"
         android:layout_height="38dp"
-        android:layout_marginBottom="332dp"
+        android:layout_marginBottom="364dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:gravity="center_vertical|center"
@@ -69,21 +70,22 @@
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="24dp"
         android:gravity="center_vertical"
         android:text="@string/title"
+        android:textAlignment="textEnd"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="110dp"
-        android:layout_height="24dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="8dp"
         android:text="@string/timeFrame"
         app:layout_constraintBottom_toTopOf="@+id/attendingBtn"
@@ -101,7 +103,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintHorizontal_bias="0.214"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/descInput"
         app:layout_constraintVertical_bias="0.0" />
@@ -110,7 +112,7 @@
         android:id="@+id/attendingBtn"
         android:layout_width="152dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="248dp"
+        android:layout_marginBottom="268dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="@string/attending"
