--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -153,12 +153,16 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="322dp"
-        android:layout_height="161dp"
+        android:id="@+id/recycleView"
+        android:layout_width="326dp"
+        android:layout_height="157dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/commentInput" />
+
 </android.support.constraint.ConstraintLayout>
