--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,10 +84,10 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimary"
-        android:text="@string/SignUp"
+        android:text="Sign Up"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="30sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
