--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -137,7 +137,7 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/addComment"
         android:layout_width="72dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
