--- a/app/src/main/res/layout/are_you_sure.xml
+++ b/app/src/main/res/layout/are_you_sure.xml
@@ -11,6 +11,39 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/title"
+                android:textSize="20dp"
+                android:layout_width="wrap_content"
+                android:textStyle="bold"
+                android:layout_centerHorizontal="true"
+                android:text="@string/sure"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/yes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/title"
+                android:layout_alignParentLeft="true"
+                android:layout_alignStart="@+id/title"
+                android:layout_below="@+id/title"
+                android:background="@android:color/holo_red_dark"
+                android:minWidth="175dp"
+                android:text="Delete" />
+
+            <Button
+                android:id="@+id/no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/title"
+                android:layout_alignParentRight="true"
+                android:layout_alignRight="@+id/title"
+                android:layout_below="@+id/title"
+                android:background="@android:color/holo_blue_light"
+                android:minWidth="175dp"
+                android:text="Cancel" />
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
